In dark mode make sure overlay is black instead of white

--- a/public/css/tailwind.output.css
+++ b/public/css/tailwind.output.css
@@ -4602,7 +4602,7 @@
   .bg-gray-900\/50 {
     background-color: color-mix(in srgb, #000000 50%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, #000000 40%, transparent);
+      background-color: color-mix(in oklab, #000000 50%, transparent);
     }
   }
   .dark-mode-toggle > div::after {
